OPP-75: Code fixes.